# Incepedia

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  INDEX.parquet  README.en.md  README.md  pyproject.toml  requirements.txt
configs/: generators.yaml  personas.yaml  topics.yaml
configs/batches/: mvp_20260424.yaml
configs/watchdog/: jobs.json
data/: README.md
docs/: FAQ.md  Incepedia-Overview.docx  codenames-cheatsheet.docx  codenames-cheatsheet.md  incepedia-overview.md  methodology.md  multi-machine-eval-setup.md  project-status.md
docs/decisions/: 0001-three-layer-storage.md  0002-ablation-as-quality-metric.md  0003-multi-tier-generator-routing.md  0006-evaluation-stack-policy.md  (+7 more)
experiments/: README.md
patches/: nanotron_consumption_stats_local.patch  nanotron_datatrove09_dataset.patch  nanotron_fa3_optional_switch.patch  nanotron_rotary_flash_attn28.patch
scripts/: README_DETACHMENT.md  _eval_one_ckpt_worker.py  bench_fa2_vs_fa3.py  benchmark_concurrency.py  bootstrap_env.sh  check_resume.py  check_setup.sh  convert_nanotron_qwen2_to_hf.py  eval_all_ckpts.py  eval_rolling_remote.sh  fetch_reference_data.py  generate_mvp.py  index_experiment.py  launch_if_gpu_free.sh  lint_nanotron_yaml.py  mount_lambda_nas.sh  plot_figure1_overlay.py  prefetch_eval_datasets.py  prepare_mvp_seeds.py  run_detached.sh  run_eval.sh  run_experiment.py  start_aim_ui.sh  stats_cosmopedia_v2.py  sync_to_nas.sh  tail_train_log_to_aim.py  test_detach.sh  tokenize_dataset.py  tokenize_protocol_c.py  train_watchdog.py
third_party_sources/: cosmopedia_eval_README.md
(+26 files in other folders)
