[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incepedia"
version = "0.0.1"
description = "Incepedia — synthetic pretraining dataset aimed at outperforming Cosmopedia on downstream ablation benchmarks."
authors = [{ name = "bill-lee-mk" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
